modules/brscript/tests/scripts/analyzer/errors/invalid_concatenation_dictionary.br
func test():
	print({"hello": "world"} + {"bradot": "engine"})
